--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "readable-lists-api",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Database adapters and API for readable-lists",
   "keywords": [],
   "dependencies": {
-    "mongod": "~1.3.0"
+    "concat-stream": "^1.4.6",
+    "knox": "^0.9.0",
+    "mongod": "~1.3.0",
+    "promise": "^5.0.0"
   },
   "devDependencies": {},
   "scripts": {},
