--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "concat-stream": "^1.4.6",
     "knox": "^0.9.0",
     "mongod": "~1.3.0",
-    "promise": "^5.0.0"
+    "promise": "^5.0.0",
+    "uid": "0.0.2"
   },
   "devDependencies": {},
   "scripts": {},
