--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Database adapters and API for readable-lists",
   "keywords": [],
   "dependencies": {
-    "concat-stream": "^1.4.6",
-    "knox": "^0.9.0",
-    "mongod": "~1.3.0",
-    "promise": "^5.0.0",
+    "concat-stream": "^1.6.0",
+    "knox": "^0.9.2",
+    "then-mongo": "^2.3.2",
+    "promise": "^7.1.1",
     "uid": "0.0.2"
   },
   "devDependencies": {},
